# Julia

./: .gitignore  AIPersona.sln  CMakeLists.txt  CMakePresets.json  README.md  project-structure.txt  project-tree-clean.txt  vcpkg.json
ASCIIModel/: AI Control Interface.h  ASCIIModel.vcxproj  ASCIIModel.vcxproj.filters  ASCIIRenderer.cpp  ASCIIRenderer.h  Animation Module.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Lighting Module.h  Mesh.h  Model Loader Module.cpp  Model Loader Module.h  ModelData.h  OpenGLWindow.cpp  OpenGLWindow.h  Shader.cpp  Utility Module.h  cpp.hint  fragment .shader  fragment.shader  fragment_shader.glsl  glad.c  shader.h  vertex.shader  vertex_shader.glsl
DataBase/: AIStateSnapshotModel.cpp  AIStateSnapshotModel.h  APIMetadataModel.cpp  APIMetadataModel.h  AnnotatedDataModel.cpp  AnnotatedDataModel.h  DataBase.vcxproj  DataBase.vcxproj.filters  DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseUtils.cpp  DatabaseUtils.h  FactModel.cpp  FactModel.h  FeedbackModel.cpp  FeedbackModel.h  KnowledgeModel.cpp  KnowledgeModel.h  MessageModel.cpp  MessageModel.h  OntologySchemaModel.cpp  OntologySchemaModel.h  RuleModel.cpp  RuleModel.h  TrainingSampleModel.cpp  TrainingSampleModel.h  UserProfileModel.cpp  UserProfileModel.h  history.txt  Сonversation .cpp
EmotionSystem/: CognitiveAppraisalEngine.cpp  CognitiveAppraisalEngine.h  EmotionAnalyzer.cpp  EmotionAnalyzer.h  EmotionGenerator.cpp  EmotionGenerator.h  EmotionInfluenceInterface.cpp  EmotionInfluenceInterface.h  EmotionRegulationModule.cpp  EmotionRegulationModule.h  EmotionSystem.vcxproj  EmotionSystem.vcxproj.filters  EmotionUtils.cpp  EmotionUtils.h  EmotionalExpressionController.cpp  EmotionalExpressionController.h  EmotionalLearningModule.cpp  EmotionalLearningModule.h  EmotionalState.cpp  EmotionalState.h  vertex.shader
ImageRecognition/: ImageData.h  ImageRecognition.vcxproj  ImageRecognition.vcxproj.filters
Julia/: AICore.cpp  AICore.h  AICore.rc  Julia.vcxproj  Julia.vcxproj.filters  KnowledgeBase.h  ResponseGenerator.h  fragment_shader.glsl  log.txt  main.cpp  resource.h
LearningSystem/: ActiveLearningModule.cpp  ActiveLearningModule.h  AdvancedReinforcementLearningSuite.cpp  AdvancedReinforcementLearningSuite.h  CausalInferenceLearner.cpp  CausalInferenceLearner.h  ConceptFormationSystem.cpp  ConceptFormationSystem.h  ContinualLearningEngine.cpp  ContinualLearningEngine.h  GenerativeWorldModelLearner.cpp  GenerativeWorldModelLearner.h  GoalGenerationLearner.cpp  GoalGenerationLearner.h  HybridNeuralSymbolicArchitecture.cpp  HybridNeuralSymbolicArchitecture.h  IExplainableLearning.cpp  IExplainableLearning.h  IntrinsicMotivationEngine.cpp  IntrinsicMotivationEngine.h  KnowledgeEvolutionManager.cpp  KnowledgeEvolutionManager.h  LearningStrategyController.cpp  LearningStrategyController.h  LearningSystem.vcxproj  LearningSystem.vcxproj.filters  MemoryConsolidationEngine.cpp  MemoryConsolidationEngine.h  MetaLearningEngine.cpp  MetaLearningEngine.h  SelfSupervisedLearningFramework.cpp  SelfSupervisedLearningFramework.h  UnsupervisedDiscoveryEngine.cpp  UnsupervisedDiscoveryEngine.h
SpeechRecognition/: ASRConfig.cpp  ASRConfig.h  ASRResourceManager.cpp  ASRResourceManager.h  AcousticModel.cpp  AcousticModel.h  AudioInput.cpp  AudioInput.h  Decoder.h  DecodingGraph.cpp  DecodingGraph.h  FeatureExtractor.cpp  FeatureExtractor.h  LanguageModel.cpp  LanguageModel.h  Lexicon.h  NeuralNetAcousticModel.cpp  NeuralNetAcousticModel.h  SpeechRecognition.vcxproj  SpeechRecognition.vcxproj.filters  SpeechRecognizer.cpp  SpeechRecognizer.h
Utilities/: LoadWindow.cpp  LoadWindow.h  Logger.cpp  Logger.h  Utilities.vcxproj  Utilities.vcxproj.filters  console_output.txt  utilities.h
VoiceSynthesis/: VoiceSynthesis.vcxproj  VoiceSynthesis.vcxproj.filters  packages.config
apps/: CMakeLists.txt
apps/julia_desktop/: CMakeLists.txt  main.cpp
apps/julia_sandbox/: CMakeLists.txt
assets/models/: Raphtalia1.fbx
assets/shaders/: background.frag  background.vert  model.frag  model.vert
cmake/: JuliaCompilerOptions.cmake  JuliaWarnings.cmake
libraries/OpenAl_debug/: OpenAL32.exp  OpenAL32.lib  alsoft.excommon.lib
libraries/PostgreSQL/17/lib/: libcrypto.lib  libecpg.lib  libecpg_compat.lib  libpgtypes.lib  libpq.lib  libssl.lib  libxml2.lib  pgevent.lib  postgres.lib  wxbase32u.lib  wxbase32u_net.lib  wxbase32u_xml.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_html.lib  wxmsw32u_xrc.lib
libraries/assimp/lib/: assimp-vc143-mtd.dll.recipe  assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
libraries/curl/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
libraries/glad/src/: glad.c
libs/: CMakeLists.txt
libs/affect/: CMakeLists.txt
libs/cognition/: CMakeLists.txt
libs/communication/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/julia/core/: Id.hpp  Result.hpp  Time.hpp  Types.hpp
libs/core/src/: Time.cpp
libs/diagnostics/: CMakeLists.txt
libs/embodiment/: CMakeLists.txt
libs/events/: CMakeLists.txt
libs/events/include/julia/events/: Event.hpp  EventBus.hpp  EventQueue.hpp  EventType.hpp
libs/events/src/: EventBus.cpp  EventQueue.cpp
libs/generation/: CMakeLists.txt
libs/learning/: CMakeLists.txt
libs/memory/: CMakeLists.txt
libs/perception/: CMakeLists.txt
libs/physics/: CMakeLists.txt
libs/platform/: CMakeLists.txt
libs/render/: CMakeLists.txt
libs/render/src/: RenderSystem.cpp
libs/runtime/: CMakeLists.txt
libs/safety/: CMakeLists.txt
libs/storage/: CMakeLists.txt
libs/voice/: CMakeLists.txt
libs/world/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/render_opengl/: CMakeLists.txt
plugins/render_opengl/include/julia/render_opengl/: Bounds.hpp  GLMesh.hpp  GLModel.hpp  GLModelLoader.hpp  GLShader.hpp  GLTexture.hpp  OpenGLRenderer.hpp
plugins/render_opengl/src/: GLMesh.cpp  GLModel.cpp  GLModelLoader.cpp  GLShader.cpp  GLTexture.cpp  OpenGLRenderer.cpp
tests/: CMakeLists.txt  julia_test.hpp  test_core.cpp  test_events.cpp
(+11 files in other folders)
