add_subdirectory(core)
add_subdirectory(diagnostics)
add_subdirectory(platform)
add_subdirectory(events)
add_subdirectory(runtime)
add_subdirectory(storage)
add_subdirectory(memory)
add_subdirectory(world)
add_subdirectory(perception)
add_subdirectory(affect)
add_subdirectory(safety)
add_subdirectory(communication)
add_subdirectory(voice)
add_subdirectory(embodiment)
add_subdirectory(cognition)
add_subdirectory(generation)
add_subdirectory(learning)
add_subdirectory(physics)
add_subdirectory(render)
